# assimp_view

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake.yml  codeql.yml
cmake/: HunterGate.cmake
src/: AssimpViewerApp.cpp  AssimpViewerApp.h  MainRenderView.cpp  MainRenderView.h  ModelLoading.cpp  ModelLoadingApp.h  SceneData.h  main.cpp
